testdata/baselines/reference/submodule/conformance/jsContainerMergeTsDeclaration3.errors.txt
a.d.ts(1,15): error TS2451: Cannot redeclare block-scoped variable 'A'.
b.js(1,7): error TS2451: Cannot redeclare block-scoped variable 'A'.
b.js(2,3): error TS2339: Property 'd' does not exist on type '{ new(): A; prototype: A; }'.


==== a.d.ts (1 errors) ====
    declare class A {}
                  ~
!!! error TS2451: Cannot redeclare block-scoped variable 'A'.
!!! related TS6203 b.js:1:7: 'A' was also declared here.
==== b.js (2 errors) ====
    const A = { };
          ~
!!! error TS2451: Cannot redeclare block-scoped variable 'A'.
!!! related TS6203 a.d.ts:1:15: 'A' was also declared here.
    A.d = { };
      ~
!!! error TS2339: Property 'd' does not exist on type '{ new(): A; prototype: A; }'.
    